--- a/bricks/containers/src/card/card.shadow.css
+++ b/bricks/containers/src/card/card.shadow.css
@@ -1,6 +1,7 @@
 :host {
   --eo-card-border-color: none;
   --eo-card-box-shadow: none;
+  --eo-card-header-border-bottom: 1px solid var(--card-border-color-split);
 }
 
 :host([outline="border"]) {
@@ -9,6 +10,10 @@
 
 :host([outline="shadow"]) {
   --eo-card-box-shadow: var(--connected-overlay-shadow);
+}
+
+:host([hide-split]) {
+  --eo-card-header-border-bottom: none;
 }
 
 .card {
@@ -34,7 +39,7 @@
   color: var(--antd-heading-color);
   font-weight: 500;
   font-size: 16px;
-  border-bottom: 1px solid var(--card-border-color-split);
+  border-bottom: var(--eo-card-header-border-bottom);
   line-height: 22px;
   box-sizing: border-box;
 }
