--- a/bricks/containers/src/card/host-context.css
+++ b/bricks/containers/src/card/host-context.css
@@ -4,8 +4,23 @@
   --eo-card-body-padding: var(--card-body-padding);
 }
 
+eo-card[hide-split] {
+  --eo-card-body-padding: 4px var(--card-body-padding-vertical)
+    var(--card-body-padding-vertical);
+}
+
 html[data-ui="v8-2"] {
   --eo-card-border-radius: 0;
+
+  eo-card[hide-split] {
+    --eo-card-body-padding: 4px 0;
+  }
+  eo-card[outline="border"]eo-card[hide-split],
+  eo-card[outline="shadow"]eo-card[hide-split],
+  eo-card[outline="background"]eo-card[hide-split] {
+    --eo-card-body-padding: 4px var(--card-body-padding-vertical)
+      var(--card-body-padding-vertical);
+  }
 
   /* In UI v8.2, these outlined cards do have horizontal padding */
   eo-card[outline="border"],
