--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -39,7 +39,7 @@ eo-link {
   width: var(--menu-item-icon-size);
   height: var(--menu-item-icon-size);
   font-size: var(--menu-item-icon-size);
-  color: rgb(87, 104, 156);
+  color: var(--left-sidebar-item-collapsed-icon-color);
 }
 
 .menu-item-text {
@@ -74,7 +74,7 @@ eo-link {
 
 /* menu-collapsed */
 :host([menu-collapsed]) .menu-item {
-  padding: 10px calc(50% - var(--menu-item-icon-size) / 2);
+  padding: 0px calc(50% - var(--menu-item-icon-size) / 2);
 }
 
 :host([menu-collapsed]) .menu-item-text {
