--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -96,8 +96,7 @@ eo-link {
 }
 
 /* operator */
-:host([cover-image]) .operator,
-:host([cover-color]) .operator,
+:host([has-cover]) .operator,
 :host(:not([has-header])) .operator {
   position: absolute;
   top: 6px;
