--- a/bricks/basic/src/tag/tag.shadow.css
+++ b/bricks/basic/src/tag/tag.shadow.css
@@ -1,8 +1,13 @@
+:host {
+  display: inline-block;
+}
+:host([hidden]) {
+  display: none;
+}
+
 .tag {
   display: inline-block;
   box-sizing: border-box;
-  /* margin: 0px 8px 0px 0px; */
-  padding: 0px 8px;
   color: var(--antd-text-color);
   list-style: none;
   height: auto;
@@ -33,7 +38,7 @@
   color: var(--antd-tag-checkable-color);
 }
 
-.tag.closable:hover {
+.tag:not([class*="disabled"]).closable:hover {
   background: #e8e8e8;
   .close-icon {
     color: #595959;
@@ -63,22 +68,24 @@
 .tag.small {
   font-size: 12px;
   list-style: 20px;
-  line-height: 12px;
-  height: 16px;
+  line-height: 14px;
+  height: 18px;
+  padding: 0px 8px;
 }
 
 .tag.medium {
   font-size: 14px;
   list-style: 22px;
-
   height: 24px;
+  padding: 0px 8px;
 }
 
 .tag.large {
   font-size: 16px;
   list-style: 24px;
   line-height: 28px;
-  height: 32px;
+  height: 30px;
+  padding: 0px 16px;
 }
 /* Size */
 
@@ -114,6 +121,16 @@
 .color-geekblue-inverse {
   color: var(--tag-inverse-text-color);
   background: var(--tag-geekblue-inverse-color);
+}
+
+.color-grayblue {
+  color: var(--tag-grayblue-color);
+  background: var(--tag-grayblue-background);
+}
+
+.color-grayblue-inverse {
+  color: var(--tag-inverse-text-color);
+  background: var(--tag-grayblue-color);
 }
 
 .color-gray {
