--- a/bricks/form/src/checkbox/checkbox.shadow.css
+++ b/bricks/form/src/checkbox/checkbox.shadow.css
@@ -13,6 +13,8 @@
   line-height: 22px;
   text-align: center;
   box-sizing: 22px;
+  padding: 4px;
+  border-radius: var(--medius-border-radius);
 }
 
 .checkboxLabel:first-child {
@@ -45,8 +47,7 @@
 
 .checkboxLabel .checkboxInput[type="checkbox"]:checked {
   color: black;
-  background-color: var(--antd-checkbox-color);
-  border-color: var(--antd-checkbox-color);
+  background-color: var(--color-info-icon-bg);
 }
 
 .checkboxLabel .checkboxInner {
@@ -58,24 +59,43 @@
   width: 16px;
   height: 16px;
   direction: ltr;
-  background-color: var(--antd-checkbox-check-bg);
-  border: 1px solid var(--antd-border-color-base);
+  background-color: var(--color-fill-bg-container-1);
+  border: 1px solid var(--color-border-divider-line);
   box-sizing: border-box;
   border-collapse: separate;
   transition: all 0.3s;
 }
+.checkboxLabel:hover .checkboxInner {
+  background-color: var(--color-fill-bg-base-1);
+}
+
+.checkboxLabel:active .checkboxInner {
+  background-color: var(--color-info-icon-bg);
+}
+
 .checkboxLabel .checkboxInputCheck .checkboxInner,
 .checkboxLabel .checkboxInputPartCheck .checkboxInner {
   background-color: var(--antd-checkbox-color);
   border-color: var(--antd-checkbox-color);
 }
+
+.checkboxLabelDisabled .checkboxInputCheck .checkboxInner {
+  background-color: inherit;
+  border-color: var(--color-disabled-text);
+}
+
+.checkboxLabelDisabled .checkboxInputCheck .checkboxInner::after {
+  background-color: inherit;
+  border-color: var(--color-disabled-text);
+}
+
 .checkboxLabel .checkboxInner::after {
   position: absolute;
-  top: 50%;
-  left: 22%;
+  top: 45%;
+  left: 3px;
   display: table;
-  width: 0.36em;
-  height: 0.58em;
+  width: 0.2em;
+  height: 0.5em;
   border: 2px solid #fff;
   border-top: 0;
   border-left: 0;
@@ -93,7 +113,7 @@
   transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
 }
 .checkboxLabelCheck {
-  background: var(--antd-checkbox-checked);
+  background: var(--checkbox-bg-active);
 }
 .checkboxLabel .checkboxInputPartCheck .checkboxInner::after {
   height: 2px;
@@ -109,7 +129,7 @@
 }
 
 .checkboxLabel:hover {
-  background: var(--antd-checkbox-bg-hover);
+  background: var(--checkbox-bg-hover);
 }
 
 .checkboxLabel .checkboxText {
@@ -136,7 +156,10 @@
 
 .disabledIconCheckbox,
 .disabledIconCustomCheckbox {
-  cursor: not-allowed;
+  background-color: var(--input-outline-disabled);
+  input[type="checkbox"]::before {
+    cursor: not-allowed;
+  }
   .content {
     .text {
       color: var(--antd-checkbox-custom-type-disabled-color);
@@ -144,20 +167,20 @@
   }
 }
 .iconCheckbox:hover input[type="checkbox"]::before {
-  border: 1px solid var(--antd-checkbox-custom-type-item-hover-border-color);
+  border: 1px solid var(--color-brand-hover);
 }
 .iconCheckbox input[type="checkbox"]:checked::before {
-  border: 1px solid var(--antd-checkbox-custom-type-item-hover-border-color);
+  border: 1px solid var(--color-brand-hover);
 }
 
 .iconCustomCheckbox:hover input[type="checkbox"]::before {
-  border: 1px solid var(--antd-checkbox-custom-type-item-hover-border-color);
+  border: 1px solid var(--color-brand-hover);
 }
 
 .iconCustomCheckbox input[type="checkbox"]:checked::before {
-  border: 1px solid var(--antd-checkbox-custom-type-item-hover-border-color);
+  border: 1px solid var(--color-brand-hover);
 }
-.content {
+.iconCheckbox.content {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -180,12 +203,12 @@
   width: 100%;
   height: 100%;
   border-radius: 6px;
-  border: 1px solid var(--antd-checkbox-custom-type-item-border-color);
+  border: 1px solid var(--color-border-divider-line);
   top: 0;
   left: 0;
 }
 .collapse-header {
-  padding: 12px 16px 12px 40px;
+  padding: 0px 16px 12px 40px;
   position: relative;
   margin-left: 0px;
 }
