--- a/bricks/nav/src/sidebar-sub-menu/styles.shadow.css
+++ b/bricks/nav/src/sidebar-sub-menu/styles.shadow.css
@@ -20,7 +20,7 @@
     gap: 10px;
     align-items: center;
     font-size: var(--title-font-size);
-    padding: 0 24px 16px 24px;
+    padding: 0 20px 16px 20px;
     line-height: 26px;
     color: var(--color-header-text);
 
@@ -78,6 +78,12 @@
     .menu-item-text {
       color: var(--color-header-text);
       font-weight: var(--font-weight-400);
+    }
+  }
+
+  .in-submenu {
+    .menu-item-text {
+      color: var(--color-normal-text);
     }
   }
 
