chore(): update checkbox style

--- a/bricks/form/src/form-item/FormItem.shadow.less
+++ b/bricks/form/src/form-item/FormItem.shadow.less
@@ -73,6 +73,7 @@
     .form-item-wrapper {
       flex: 0 0 100%;
       max-width: 100%;
+      text-align: left;
     }
   }
   .form-item.horizontal .form-item-col-sm-24 {
@@ -117,7 +118,7 @@
 .form-item.vertical > .form-item-label-wrapper {
   text-align: left;
   line-height: 1;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .form-item:not(.vertical) {
