chore(): update menu-item border-radius

--- a/bricks/basic/src/dropdown-actions/styles.shadow.css
+++ b/bricks/basic/src/dropdown-actions/styles.shadow.css
@@ -16,7 +16,7 @@ eo-menu {
 
 eo-menu-item::part(menu-item) {
   padding: 5px 12px;
-  border-radius: var(--larger-border-radius);
+  border-radius: var(--medius-border-radius);
 }
 
 eo-menu-item:not([disabled]):hover::part(menu-item) {
