--- a/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
+++ b/bricks/basic/src/sidebar/sidebar-menu-item/styles.shadow.css
@@ -25,7 +25,7 @@ eo-link {
   padding: 8px 12px;
   line-height: 20px;
   color: var(--left-sidebar-item-normal-color);
-  border-radius: var(--larger-border-radius);
+  border-radius: var(--medius-border-radius);
   cursor: pointer;
   transition: all var(--side-bar-collapse-transition-duration)
     var(--side-bar-collapse-transition-timing-function);
