chore(): update checkbox style

--- a/bricks/form/src/form-item/FormItem.shadow.less
+++ b/bricks/form/src/form-item/FormItem.shadow.less
@@ -117,8 +117,8 @@
 
 .form-item.vertical > .form-item-label-wrapper {
   text-align: left;
-  line-height: 1;
-  margin-bottom: 12px;
+  line-height: 20px;
+  margin-bottom: 8px;
 }
 
 .form-item:not(.vertical) {
