--- a/bricks/form/src/checkbox/checkbox.shadow.css
+++ b/bricks/form/src/checkbox/checkbox.shadow.css
@@ -1,10 +1,9 @@
 .checkboxWrapper {
-  flex: auto;
-  max-width: 100%;
-  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px 16px;
 }
 .checkboxLabel {
-  margin-left: 16px;
   font-size: 14px;
   line-height: 1.57;
   display: inline-flex;
@@ -13,12 +12,8 @@
   line-height: 22px;
   text-align: center;
   box-sizing: 22px;
-  padding: 4px;
+  padding: 1px 4px;
   border-radius: var(--medius-border-radius);
-}
-
-.checkboxLabel:first-child {
-  margin-left: 0px;
 }
 
 .checkboxLabelDisabled {
@@ -204,16 +199,24 @@
   height: 100%;
   border-radius: 6px;
   border: 1px solid var(--color-border-divider-line);
+  cursor: pointer;
   top: 0;
   left: 0;
 }
+
+.collapse-wrapper {
+  margin-top: 4px;
+}
+
 .collapse-header {
   padding: 0px 16px 12px 40px;
   position: relative;
   margin-left: 0px;
+  margin-top: -4px;
 }
 .collapse-content {
-  padding: 12px 16px 12px 40px;
+  padding: 0px 16px 12px 40px;
+  margin-top: -4px;
   display: none;
 }
 .collapse-content-visible {
