--- a/bricks/form/src/auto-complete/styles.shadow.css
+++ b/bricks/form/src/auto-complete/styles.shadow.css
@@ -17,7 +17,7 @@
   margin: 2px 4px;
   padding: 5px 12px;
   cursor: pointer;
-  border-radius: 6px;
+  border-radius: var(--medius-border-radius);
   .label {
     line-height: 22px;
   }
@@ -56,5 +56,5 @@
   z-index: 1050;
   margin-top: 5px;
   padding: 4px 2px;
-  border-radius: 4px;
+  border-radius: var(--small-border-radius);
 }
