--- a/bricks/form/src/input/input.shadow.css
+++ b/bricks/form/src/input/input.shadow.css
@@ -41,7 +41,7 @@
   color: var(--text-color-default);
   background-color: var(--theme-gray-background);
   border: 1px solid var(--color-border-divider-line);
-  border-radius: var(--antd-button-border-radius);
+  border-radius: var(--small-border-radius);
   transition: all 0.3s;
 }
 
@@ -70,12 +70,14 @@
   display: inline-flex;
   position: relative;
   padding: var(--input-affix-wrapper-padding);
-  border-radius: var(--antd-button-border-radius);
+  border-radius: var(--small-border-radius);
   width: 100%;
   color: var(--text-color-default);
   background-color: var(--antd-input-bg);
   border: 1px solid var(--color-border-divider-line);
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
   overflow: visible;
 }
 
@@ -115,7 +117,7 @@
   border: none;
   outline: none;
   font-size: 14px;
-  line-height: 22px;
+  line-height: 20px;
   color: inherit;
   background-color: transparent;
   cursor: inherit;
