--- a/bricks/form/src/time-range-picker/styles.shadow.css
+++ b/bricks/form/src/time-range-picker/styles.shadow.css
@@ -1,3 +1,5 @@
+@import url("../time-picker/fix-style.shadow.css");
+
 :host {
   display: inline-block;
 }
@@ -25,6 +27,7 @@
   border-bottom-width: 1px;
   align-items: center;
   color: var(--text-color-disabled);
+  box-sizing: border-box;
 }
 
 .timeRange .ant-picker:first-child {
