--- a/bricks/diagram/src/diagram/styles.shadow.css
+++ b/bricks/diagram/src/diagram/styles.shadow.css
@@ -1,7 +1,48 @@
 :host {
-  display: inline-block;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 :host([hidden]) {
   display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.diagram {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  opacity: 0;
+}
+
+.ready {
+  opacity: 1;
+}
+
+.dragger,
+.lines,
+.nodes {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.node {
+  position: absolute;
+  visibility: hidden;
+}
+
+.dragger {
+  width: 100%;
+  height: 100%;
+  cursor: grab;
+}
+
+.grabbing {
+  cursor: grabbing;
 }
