chore(): update style

--- a/bricks/form/src/auto-complete/styles.shadow.css
+++ b/bricks/form/src/auto-complete/styles.shadow.css
@@ -41,8 +41,7 @@
   padding: 5px 12px;
 }
 .selectedOption {
-  color: var(--color-brand);
-  background-color: var(--top-menu-item-selected-bg);
+  background-color: var(--color-info-icon-bg);
 }
 
 .dropDownWrapper {
