feat(): update wokrbench style & launchpad add readonly mode

--- a/bricks/advanced/src/workbench-layout/styles.shadow.css
+++ b/bricks/advanced/src/workbench-layout/styles.shadow.css
@@ -91,11 +91,11 @@
     }
 
     .delete-icon:hover {
-      color: var(--color-warning);
+      color: var(--color-error);
     }
 
     .delete-icon:active {
-      color: var(--color-warning-active);
+      color: var(--color-error-active);
     }
   }
 }
